Save progress updates

--- a/app/views/save-progress/v2/appeal-saved.html
+++ b/app/views/save-progress/v2/appeal-saved.html
@@ -40,26 +40,28 @@
         Follow the link in the email we sent you to continue with your appeal.
       </p>
 
-      <p class="govuk-body">
+      <div class="govuk-inset-text">
         You have until 3 April 2022 to submit your appeal.
-      </p>
+      </div>
+
+      <!-- <p class="govuk-body">
+        You have until 3 April 2022 to submit your appeal.
+      </p> -->
 
     </div>
-  </div>
 
-  <div class="govuk-grid-column-two-thirds">
-    <ul class="govuk-list">
-      <li>
-        <a href="incomplete-appeals" class="govuk-link">
-          Continue with another appeal
-        </a>
-      </li>
-      <!-- <li>
-        <a href="incomplete-appeals" class="govuk-link">
-          Go to my list of incomplete appeals
-        </a>
-      </li> -->
-    </ul>
+    <!-- <p class="govuk-body">
+      You can either <a href="incomplete-appeals" class="govuk-link">start a new appeal</a> or <a href="incomplete-appeals" class="govuk-link">
+        continue with an appeal
+      </a>.
+    </p> -->
+
+    <p class="govuk-body">
+      You can <a href="incomplete-appeals" class="govuk-link">
+        continue with another appeal
+      </a>.
+    </p>
+
   </div>
 
   <!-- this is a prototype only link -->
