--- a/app/views/save-progress/v2/confirm-email.html
+++ b/app/views/save-progress/v2/confirm-email.html
@@ -37,7 +37,7 @@
       </label>
 
       <p class="govuk-body">
-        We've sent an email to:<br>admin@wedoplanningappeals.co.uk
+        We've sent an email to:<br>{{ data['email'] or 'sam@mac.com'}}
       </p>
 
       <p>
