--- a/app/views/save-progress/v2/contact-details/your-details.html
+++ b/app/views/save-progress/v2/contact-details/your-details.html
@@ -82,7 +82,7 @@
 
           {{ govukButton({
             href: "../appeal-saved",
-            text: "Save and exit",
+            text: "Save and come back later",
             classes: "govuk-button--secondary"
           }) }}
         </div>
