--- a/app/views/save-progress/v2/email-confirmed.html
+++ b/app/views/save-progress/v2/email-confirmed.html
@@ -36,13 +36,13 @@
         {{ title }}
       </label>
 
-      <p class="govuk-body">
+      <!-- <p class="govuk-body">
         You can save your progress on this appeal from now on.
       </p>
 
       <p class="govuk-body">
         This email will get you back to the appeal.
-      </p>
+      </p> -->
 
       <div class="govuk-button-group">
 
@@ -51,11 +51,11 @@
           text: "Continue"
         }) }}
 
-        {{ govukButton({
+        <!-- {{ govukButton({
           href: "appeal-saved",
-          text: "Save and exit",
+          text: "Save and come back later",
           classes: "govuk-button--secondary"
-        }) }}
+        }) }} -->
 
       </div>
 
