--- a/app/views/save-progress/v2/incomplete-appeals.html
+++ b/app/views/save-progress/v2/incomplete-appeals.html
@@ -35,10 +35,14 @@
       </label>
 
       <p class="govuk-body">
-        Select the planning application number to continue with it.
+        Select an appeal to continue with it or <a href="/appellant-submission/v13/">
+          start a new planning appeal
+        </a>.
       </p>
 
     </div>
+
+
 
   </div>
 
@@ -52,44 +56,44 @@
           <th scope="col" class="govuk-table__header govuk-!-width-one-quarter">Planning application number</th>
           <th scope="col" class="govuk-table__header">Type of application</th>
           <th scope="col" class="govuk-table__header">Local planning department</th>
+          <th scope="col" class="govuk-table__header govuk-table__header--numeric">Days left to submit appeal</th>
         </tr>
       </thead>
       <tbody class="govuk-table__body">
         <tr class="govuk-table__row">
-          <th scope="row" class="govuk-table__cell">
+          <td scope="row" class="govuk-table__cell">
             <a href="task-list?application=1234567&progress=yes" class="govuk-link govuk-link--no-visited-state">
               1234567
             </a>
-          </th>
+          </td>
           <td class="govuk-table__cell">Full planning</td>
           <td class="govuk-table__cell">City of Bradford Metropolitan District Council</td>
+          <td class="govuk-table__cell govuk-table__cell--numeric">17 days</td>
         </tr>
         <tr class="govuk-table__row">
-          <th scope="row" class="govuk-table__cell">
+          <td scope="row" class="govuk-table__cell">
             <a href="task-list?application=2345678&progress=yes" class="govuk-link govuk-link--no-visited-state">
               2345678
             </a>
-          </th>
+          </td>
           <td class="govuk-table__cell">Householder planning</td>
           <td class="govuk-table__cell">City of Bradford Metropolitan District Council</td>
+          <td class="govuk-table__cell govuk-table__cell--numeric">33 days</td>
         </tr>
         <tr class="govuk-table__row">
-          <th scope="row" class="govuk-table__cell">
+          <td scope="row" class="govuk-table__cell">
             <a href="task-list?application=3456789&progress=yes" class="govuk-link govuk-link--no-visited-state">
               3456789
             </a>
-          </th>
+          </td>
           <td class="govuk-table__cell">Full planning</td>
           <td class="govuk-table__cell">City of Bradford Metropolitan District Council</td>
+          <td class="govuk-table__cell govuk-table__cell--numeric">52 days</td>
         </tr>
       </tbody>
     </table>
 
-    <p class="govuk-body">
-      <a href="/appellant-submission/v13/">
-        Start a new planning appeal
-      </a>
-    </p>
+
 
   </div>
 </div>
