--- a/app/views/save-progress/v2/return-email.html
+++ b/app/views/save-progress/v2/return-email.html
@@ -28,7 +28,7 @@ Dear [IP NAME]Site detailsSite Address:[INSERT HERE]Description of development:[
     </p>
 
     <p class="govuk-body">
-      This link will expire after 30 minutes.
+      This link will expire after 6 weeks.
     </p>
 
     <p class="govuk-body">
