--- a/app/views/save-progress/v2/contact-details/who-are-you.html
+++ b/app/views/save-progress/v2/contact-details/who-are-you.html
@@ -63,7 +63,7 @@
 
           {{ govukButton({
             href: "../appeal-saved",
-            text: "Save and exit",
+            text: "Save and come back later",
             classes: "govuk-button--secondary"
           }) }}
         </div>
