--- a/app/views/save-progress/v2/what-is-your-email.html
+++ b/app/views/save-progress/v2/what-is-your-email.html
@@ -47,7 +47,7 @@
           </p>
 
           <div class="govuk-form-group">
-            <input class="govuk-input govuk-input--width-20" id="email" name="email" type="text" spellcheck="false" autocomplete="email" value="{{ data['email'] }}">
+            <input class="govuk-input govuk-input--width-20" id="email" name="email" type="text" spellcheck="false" autocomplete="email" value="">
           </div>
 
         </div>
