Content tweaks to v2 of save progress

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -140,7 +140,7 @@
                         </a>
                       </li>
                       <li>
-                        <a href="/magic-link-email">
+                        <a href="/save-progress/v2/magic-link-email">
                           Subject: Return to appeal a planning decision
                         </a>
                       </li>
