--- a/app/views/save-progress/v2/return-email.html
+++ b/app/views/save-progress/v2/return-email.html
@@ -7,15 +7,21 @@
 
 Dear [IP NAME]Site detailsSite Address:[INSERT HERE]Description of development:[INSERT HERE]Application reference:[INSERT HERE]An appeal has been made against the decision of [LPD]to [insert reason for appeal, i.e. refuse to grant planning permission].[The appeal will be determined on the basis of written representations.][The appeal will be determined on the basis of a hearing.] [The appeal will be determined on the basis of an inquiry.] Interested individuals that want to take part in the Inquiry can do so by applying for Rule 6 status.Rule 6 status means that you would be able to present your evidence on a formal basis and cross examine the evidence of others.You can learn more about Rule 6 at:https://www.gov.uk/government/publications/apply-for-rule-6-status-on-a-planning-appeal-or-called-in-applicationWhat happens next** TO BE ADDED **Thank you,The Planning Inspectorate
 
-
-
 {% block content %}
-<p><strong>Subject:</strong> Return to appeal a planning decision</p>
-<p><strong>From:</strong> planningappeals@bristolcitycouncil.gov.uk</p>
-
-<img src="{{ asset_path }}images/pi-logo.png" width="150"/>
-
-<hr>
+<!-- faux email header -->
+<section>
+  <p>
+    <strong>Subject:</strong> Return to appeal a planning decision
+  </p>
+  <p>
+    <strong>To:</strong> {{ data['email'] or 'sam@mac.com'}}<br>
+    <strong>From:</strong> planningappeals@bristolcitycouncil.gov.uk
+  </p>
+  <p>
+    <img src="{{ asset_path }}images/pi-logo.png" width="150"/>
+  </p>
+  <hr>
+</section>
 
 <div class="govuk-grid-row govuk-!-margin-top-5">
   <div class="govuk-grid-column-two-thirds">
@@ -28,7 +34,8 @@ Dear [IP NAME]Site detailsSite Address:[INSERT HERE]Description of development:[
     </p>
 
     <p class="govuk-body">
-      This link will expire after 6 weeks.
+      <!-- This link will expire after 6 weeks. -->
+      You have until 3 April 2022 to submit your appeal.
     </p>
 
     <p class="govuk-body">
