--- a/app/views/save-progress/v2/magic-link-email.html
+++ b/app/views/save-progress/v2/magic-link-email.html
@@ -10,12 +10,22 @@ Dear [IP NAME]Site detailsSite Address:[INSERT HERE]Description of development:[
 
 
 {% block content %}
-<p><strong>Subject:</strong> Return to appeal a planning decision</p>
-<p><strong>From:</strong> planningappeals@bristolcitycouncil.gov.uk</p>
 
-<img src="{{ asset_path }}images/pi-logo.png" width="150"/>
+<!-- faux email header -->
+<section>
+  <p>
+    <strong>Subject:</strong> Return to appeal a planning decision
+  </p>
+  <p>
+    <strong>To:</strong> {{ data['email'] or 'sam@mac.com'}}<br>
+    <strong>From:</strong> planningappeals@bristolcitycouncil.gov.uk
+  </p>
+  <p>
+    <img src="{{ asset_path }}images/pi-logo.png" width="150"/>
+  </p>
+  <hr>
+</section>
 
-<hr>
 
 <div class="govuk-grid-row govuk-!-margin-top-5">
   <div class="govuk-grid-column-two-thirds">
