Fixing the version names and links

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -53,17 +53,7 @@
                     </p>
 
                     <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
-                      Version 2 - Save progress
-                    </h3>
-
-                    <ul class="govuk-list govuk-list--bullet">
-                      <li>
-                        <a href="/save-progress/v2/check-answers">End ‘Before you start’ / Check answers</a>
-                      </li>
-                    </ul>
-
-                    <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
-                      Version 1 - Save progress
+                      ‘Save and return’ - version 2
                     </h3>
 
                     <ul class="govuk-list govuk-list--bullet">
@@ -155,9 +145,100 @@
                         </a>
                       </li>
 
+                    </ul>
 
+                    <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
+                      ‘Save and return’ - version 1
+                    </h3>
 
-
+                    <ul class="govuk-list govuk-list--bullet">
+                      <li>
+                        <a href="/save-progress/v1/check-answers">
+                          End ‘Before you start’ / Check answers
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/save-progress/v1/what-is-your-application-number">
+                          What is your application number
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/save-progress/v1/what-is-your-email">
+                          What is your email address
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/save-progress/v1/confirm-email">
+                          Confirm your email address
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/save-progress/v1/confirmation-email">
+                          Subject: Confirm your email address
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/save-progress/v1/email-confirmed">
+                          Your email address is confirmed
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/save-progress/v1/before-you-continue">
+                          You’ll need to submit some documents
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/save-progress/v1/task-list">
+                          Task list
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/save-progress/v1/contact-details/who-are-you">
+                          Provide your contact details<br>
+                          Was the planning application made in your name?
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/save-progress/v1/contact-details/your-details">
+                          Provide your contact details<br>
+                          Contact details
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/save-progress/v1/appeal-saved">
+                          Your appeal has been saved
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/save-progress/v1/return-email">
+                          Subject: Return to appeal a planning decision
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/save-progress/v1/input-magic-link-email">
+                          Enter the email address that you used for the appeal
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/save-progress/v1/magic-link-email-sent">
+                          We’ve sent you an email
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/save-progress/v1/magic-link-email">
+                          Subject: Return to appeal a planning decision
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/incomplete-appeals">
+                          Incomplete appeals
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/return-email">
+                          Return email
+                        </a>
+                      </li>
 
                     </ul>
 
