Save progress updates

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -88,6 +88,16 @@
                         </a>
                       </li>
                       <li>
+                        <a href="/save-progress/v2/expired-link">
+                          Link expired
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/save-progress/v2/confirm-email-resent">
+                          New link sent
+                        </a>
+                      </li>
+                      <li>
                         <a href="/save-progress/v2/before-you-continue">
                           You’ll need to submit some documents
                         </a>
