--- a/app/views/save-progress/v2/before-you-continue.html
+++ b/app/views/save-progress/v2/before-you-continue.html
@@ -80,7 +80,7 @@
         }) }}
 
         {{ govukButton({
-          href: "appeal-saved",
+          href: "appeal-saved?savedOn=start",
           text: "Save and come back later",
           classes: "govuk-button--secondary"
         }) }}
