Addition of inbox UI to the save progress journey

--- a/app/views/save-progress/v2/confirm-email.html
+++ b/app/views/save-progress/v2/confirm-email.html
@@ -72,7 +72,7 @@
 
   <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-0">
     <p class="govuk-body-s">
-      <a href="confirmation-email">
+      <a href="inbox-1">
         Go to the email (your inbox)
       </a>
     </p>
