--- a/app/views/save-progress/v2/magic-link-email-sent.html
+++ b/app/views/save-progress/v2/magic-link-email-sent.html
@@ -73,7 +73,7 @@
 
   <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-0">
     <p class="govuk-body-s">
-      <a href="magic-link-email">
+      <a href="inbox-3">
         Go to the email (your inbox)
       </a>
     </p>
