--- a/app/views/save-progress/v2/magic-link-email.html
+++ b/app/views/save-progress/v2/magic-link-email.html
@@ -14,7 +14,7 @@ Dear [IP NAME]Site detailsSite Address:[INSERT HERE]Description of development:[
 <!-- faux email header -->
 <section>
   <p>
-    <strong>Subject:</strong> Return to appeal a planning decision
+    <strong>Subject:</strong> Temporary link - Continue with your appeal for application {{ data['applicationNumber'] or '1234567'}}
   </p>
   <p>
     <strong>To:</strong> {{ data['email'] or 'sam@mac.com'}}<br>
