--- a/app/views/save-progress/v2/return-email.html
+++ b/app/views/save-progress/v2/return-email.html
@@ -10,8 +10,8 @@ Dear [IP NAME]Site detailsSite Address:[INSERT HERE]Description of development:[
 {% block content %}
 <!-- faux email header -->
 <section>
-  <p>
-    <strong>Subject:</strong> Return to appeal a planning decision
+    <p>
+    <strong>Subject:</strong> Continue with your appeal for application {{ data['applicationNumber'] or '1234567'}}
   </p>
   <p>
     <strong>To:</strong> {{ data['email'] or 'sam@mac.com'}}<br>
