--- a/app/views/save-progress/v2/appeal-saved.html
+++ b/app/views/save-progress/v2/appeal-saved.html
@@ -70,7 +70,7 @@
 
   <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-0">
     <p class="govuk-body-s">
-      <a href="return-email">
+      <a href="inbox-2">
         Go to the email (your inbox)
       </a>
     </p>
