--- a/app/views/index.html
+++ b/app/views/index.html
@@ -145,13 +145,19 @@
                         </a>
                       </li>
                       <li>
-                        <a href="/incomplete-appeals">
+                        <a href="/save-progress/v2/incomplete-appeals">
                           Incomplete appeals
                         </a>
                       </li>
                       <li>
-                        <a href="/return-email">
+                        <a href="/save-progress/v2/return-email">
                           Return email
+                        </a>
+                      </li>
+                      <br>
+                      <li>
+                        <a href="/save-progress/v2/what-do-you-want-to-do">
+                          Service start
                         </a>
                       </li>
 
