--- a/app/views/save-progress/v2/incomplete-appeals.html
+++ b/app/views/save-progress/v2/incomplete-appeals.html
@@ -93,7 +93,11 @@
       </tbody>
     </table>
 
-
+    {{ govukButton({
+      href: "appeal-saved?savedOn=appeals",
+      text: "Save and come back later",
+      classes: "govuk-button--secondary"
+    }) }}
 
   </div>
 </div>
