--- a/app/views/save-progress/v2/magic-link-email-sent.html
+++ b/app/views/save-progress/v2/magic-link-email-sent.html
@@ -38,7 +38,7 @@
 
       <p class="govuk-body">
         We’ve emailed a link to:<br>
-        admin@wedoplanningappeals.co.uk
+        {{ data['email'] or 'sam@mac.com'}}
       </p>
 
       <p class="govuk-body">
