--- a/app/views/save-progress/v2/magic-link-email.html
+++ b/app/views/save-progress/v2/magic-link-email.html
@@ -30,13 +30,19 @@ Dear [IP NAME]Site detailsSite Address:[INSERT HERE]Description of development:[
 <div class="govuk-grid-row govuk-!-margin-top-5">
   <div class="govuk-grid-column-two-thirds">
 
+    <p class="govuk-body">
+      {{ data['savedOn'] }}
+    </p>
+
     <p class="govuk-body">Dear [name],</p>
 
     <p class="govuk-body">
       Go to the link to continue with your appeal submission:<br>
 
-      {% if data['savedOn'] === 'start' %}
+      {% if data['savedOn'] == 'start' %}
         <a href="before-you-continue">www.gov.uk/appeal-a-planning-decision/appeals?session=679aa0</a>
+      {% elseif data['savedOn'] == 'task' %}
+        <a href="task-list">www.gov.uk/appeal-a-planning-decision/appeals?session=679aa0</a>
       {% else %}
           <a href="incomplete-appeals">www.gov.uk/appeal-a-planning-decision/appeals?session=321fa2</a>
       {% endif %}
