--- a/app/views/save-progress/v2/contact-details/who-are-you.html
+++ b/app/views/save-progress/v2/contact-details/who-are-you.html
@@ -62,7 +62,7 @@
           }) }}
 
           {{ govukButton({
-            href: "../appeal-saved",
+            href: "../appeal-saved?savedOn=task",
             text: "Save and come back later",
             classes: "govuk-button--secondary"
           }) }}
