--- a/app/views/save-progress/v2/contact-details/your-details.html
+++ b/app/views/save-progress/v2/contact-details/your-details.html
@@ -81,7 +81,7 @@
           }) }}
 
           {{ govukButton({
-            href: "../appeal-saved",
+            href: "../appeal-saved?savedOn=task",
             text: "Save and come back later",
             classes: "govuk-button--secondary"
           }) }}
