Still having problems format

--- a/app/views/save-progress/v2/confirm-email-resent.html
+++ b/app/views/save-progress/v2/confirm-email-resent.html
@@ -53,7 +53,12 @@
       </p>
 
       <p class="govuk-body">
-        If you still do not find this email, <a href="enquiries@planninginspectorate.gov.uk">send us an email at enquiries@planninginspectorate.gov.uk</a> or call 0303 444 5000.
+        If you’re still having problems, you can contact our customer support team:
+      </p>
+
+      <p class="govuk-body">
+        Email: <a href="">enquiries@planninginspectorate.gov.uk</a><br>
+        Telephone: 0303 444 5000
       </p>
 
     </div>
