--- a/app/views/save-progress/v2/magic-link-email-sent.html
+++ b/app/views/save-progress/v2/magic-link-email-sent.html
@@ -49,20 +49,22 @@
         If you’re having problems
       </h2>
 
-      <ul class="govuk-list govuk-list--bullet">
-        <li>
-          check the email has not gone into your spam/bulk folder
-        </li>
-        <li>
-          we can <a href="">resend the email</a>
-        </li>
-        <li>
-          email our customer support team at enquiries@theplanninginspectorate.gov.uk
-        </li>
-        <li>
-          call our customer support team on 0303 444 5000
-        </li>
-      </ul>
+      <p class="govuk-body">
+        Check the email has not gone into your spam or junk folder.
+      </p>
+
+      <p class="govuk-body">
+        We can <a href="confirm-email-resent">resend the email</a>.
+      </p>
+
+      <p class="govuk-body">
+        If you’re still having problems, you can contact our customer support team:
+      </p>
+
+      <p class="govuk-body">
+        Email: <a href="">enquiries@planninginspectorate.gov.uk</a><br>
+        Telephone: 0303 444 5000
+      </p>
 
     </div>
   </div>
