--- a/app/views/save-progress/v2/before-you-continue.html
+++ b/app/views/save-progress/v2/before-you-continue.html
@@ -30,64 +30,57 @@
 
     <span class="govuk-caption-l">{{ subServiceName }}</span>
 
-    <div class="govuk-form-group">
+    <h1 class="govuk-heading-l">
+      {{ title }}
+    </h1>
 
-      <label class="govuk-label govuk-label--l" for="postcode">
-        {{ title }}
-      </label>
-
-      <details class="govuk-details" data-module="govuk-details">
-        <summary class="govuk-details__summary">
-          <span class="govuk-details__summary-text">
-            Check what you need to submit
-          </span>
-        </summary>
-        <div class="govuk-details__text">
-          <p class="govuk-body">
-            You need to submit these documents with your appeal:
-          </p>
-          <ul class="govuk-list govuk-list--bullet">
-            <li>your planning application form</li>
-            <li>the plans, drawings and supporting documents you submitted with your application</li>
-            {% if data["bys-"+version+"-permissiongrantedrefused"] != "I have not received a decision" %}
-              <li>the decision letter from your local planning department</li>
-            {% endif %}
-            <li>your design and access statement, if you submitted one with your application</li>
-            <li>your appeal statement</li>
-          </ul>
-          <p class="govuk-body">
-            If you do not have a copy of your planning application form, you can search for it on your local planning department's website.
-          </p>
-          <p class="govuk-body">
-            You also have the option to submit:
-          </p>
-          <ul class="govuk-list govuk-list--bullet">
-            <li>plans or drawings that have been updated or created since your application</li>
-            <li>any other documents that you'd like to submit in support of your appeal</li>
-          </ul>
-        </div>
-      </details>
+    <section class="govuk-!-margin-bottom-6">
 
       <p class="govuk-body">
-        From now, you’re able to save and continue with your appeal later.
+        You will need to submit the following:
       </p>
 
-      <div class="govuk-button-group">
+      <ul class="govuk-list govuk-list--bullet">
+        <li>your planning application form</li>
+        <li>the plans, drawings and supporting documents you submitted with your application</li>
+        {% if data["bys-"+version+"-permissiongrantedrefused"] != "I have not received a decision" %}
+          <li>the decision letter from your local planning department</li>
+        {% endif %}
+        <li>your design and access statement, if you submitted one with your application</li>
+        <li>your appeal statement</li>
+      </ul>
+      <p class="govuk-body">
+        If you do not have a copy of your planning application form, you can search for it on your local planning department's website.
+      </p>
+      <p class="govuk-body">
+        You also have the option to submit:
+      </p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>plans or drawings that have been updated or created since your application</li>
+        <li>any other documents that you'd like to submit in support of your appeal</li>
+      </ul>
 
-        {{ govukButton({
-          href: "task-list",
-          text: "Continue"
-        }) }}
+    </section>
 
-        {{ govukButton({
-          href: "appeal-saved?savedOn=start",
-          text: "Save and come back later",
-          classes: "govuk-button--secondary"
-        }) }}
+    <p class="govuk-body">
+      From now, you’re able to save and continue with your appeal later.
+    </p>
 
-      </div>
+    <div class="govuk-button-group">
+
+      {{ govukButton({
+        href: "task-list",
+        text: "Continue"
+      }) }}
+
+      {{ govukButton({
+        href: "appeal-saved?savedOn=start",
+        text: "Save and come back later",
+        classes: "govuk-button--secondary"
+      }) }}
 
     </div>
+
   </div>
 
 </div>
