MVP v2 for before you start changes

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -29,7 +29,8 @@
         }) }}
         <h2 class="govuk-heading-l">Full Appeal MVP Prototype</h2>
         <p class="govuk-body">This prototype is to be used as documentation in the delivery of the MVP for the full appeal submission journey. <!--It will not change and has been signed off.--></p>
-        <p class="govuk-body"><a href="/mvp-full-appeal/v1/before-you-start/planning-department">Start journey from first screen in "Before you start"</a></p>
+        <p class="govuk-body"><a href="/mvp-full-appeal/v1/before-you-start/planning-department">Start MVP journey</a></p>
+        <p class="govuk-body"><a href="/mvp-full-appeal/v2/before-you-start/">Start MVP v2 journey (Changes to "Before you start" only)</a></p>
 
         {# Size modifiers: xl, l, m #}
         <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
