--- a/app/views/mvp-full-appeal/v2/before-you-start/enforcement-notice.html
+++ b/app/views/mvp-full-appeal/v2/before-you-start/enforcement-notice.html
@@ -1,4 +1,4 @@
-{% set pageref = "MVP-BYS-006" %}
+{% set pageref = "MVP2-BYS-006" %}
 {% extends "layouts/mvp-full-appeal/v2.html" %}
 
 {% block pageTitle %}
