--- a/app/views/mvp-full-appeal/v2/before-you-start/listed-building.html
+++ b/app/views/mvp-full-appeal/v2/before-you-start/listed-building.html
@@ -1,4 +1,4 @@
-{% set pageref = "MVP-BYS-003" %}
+{% set pageref = "MVP2-BYS-003" %}
 {% extends "layouts/mvp-full-appeal/v2.html" %}
 
 {% block pageTitle %}
