--- a/app/views/mvp-full-appeal/v2/full/appeal-documents/supporting-documents-upload.html
+++ b/app/views/mvp-full-appeal/v2/full/appeal-documents/supporting-documents-upload.html
@@ -1,4 +1,4 @@
-{% set pageref = "MVP-FUL-APP-005" %}
+{% set pageref = "MVP2-FUL-APP-005" %}
 {% extends "layouts/mvp-full-appeal/v2.html" %}
 
 {% block pageTitle %}
