--- a/app/views/mvp-full-appeal/v2/full/confirmation.html
+++ b/app/views/mvp-full-appeal/v2/full/confirmation.html
@@ -1,4 +1,4 @@
-{% set pageref = "MVP-FUL-CON" %}
+{% set pageref = "MVP2-FUL-CON" %}
 {% extends "layouts/mvp-full-appeal/v2.html" %}
 
 {% block pageTitle %}
