--- a/app/views/mvp-full-appeal/v2/full/contact-details/applicant-name.html
+++ b/app/views/mvp-full-appeal/v2/full/contact-details/applicant-name.html
@@ -1,4 +1,4 @@
-{% set pageref = "MVP-FUL-PYC-002" %}
+{% set pageref = "MVP2-FUL-PYC-002" %}
 {% extends "layouts/mvp-full-appeal/v2.html" %}
 
 {% block pageTitle %}
