--- a/app/views/mvp-full-appeal/v2/full/declaration.html
+++ b/app/views/mvp-full-appeal/v2/full/declaration.html
@@ -1,4 +1,4 @@
-{% set pageref = "MVP-FUL-DEC" %}
+{% set pageref = "MVP2-FUL-DEC" %}
 {% extends "layouts/mvp-full-appeal/v2.html" %}
 
 {% block pageTitle %}
