--- a/app/views/mvp-full-appeal/v2/before-you-start/decision-date-due.html
+++ b/app/views/mvp-full-appeal/v2/before-you-start/decision-date-due.html
@@ -1,4 +1,4 @@
-{% set pageref = "MVP-BYS-008" %}
+{% set pageref = "MVP2-BYS-008" %}
 {% extends "layouts/mvp-full-appeal/v2.html" %}
 
 {% block pageTitle %}
