--- a/app/views/mvp-full-appeal/v2/before-you-start/permission-granted-refused.html
+++ b/app/views/mvp-full-appeal/v2/before-you-start/permission-granted-refused.html
@@ -1,4 +1,4 @@
-{% set pageref = "MVP-BYS-004" %}
+{% set pageref = "MVP2-BYS-004" %}
 {% extends "layouts/mvp-full-appeal/v2.html" %}
 
 {% block pageTitle %}
