--- a/app/views/mvp-full-appeal/v2/before-you-start/removal-variation-conditions.html
+++ b/app/views/mvp-full-appeal/v2/before-you-start/removal-variation-conditions.html
@@ -1,4 +1,4 @@
-{% set pageref = "MVP-BYS-011" %}
+{% set pageref = "MVP2-BYS-011" %}
 {% extends "layouts/mvp-full-appeal/v2.html" %}
 
 {% block pageTitle %}
