--- a/app/views/mvp-full-appeal/v2/before-you-start/what-are-you-appealing.html
+++ b/app/views/mvp-full-appeal/v2/before-you-start/what-are-you-appealing.html
@@ -1,4 +1,4 @@
-{% set pageref = "MVP-BYS-002" %}
+{% set pageref = "MVP2-BYS-002" %}
 {% extends "layouts/mvp-full-appeal/v2.html" %}
 
 {% block pageTitle %}
