--- a/app/views/mvp-full-appeal/v2/full/appeal-site/agricultural-holdings-other-tenants.html
+++ b/app/views/mvp-full-appeal/v2/full/appeal-site/agricultural-holdings-other-tenants.html
@@ -1,4 +1,4 @@
-{% set pageref = "MVP-FUL-AAS-013" %}
+{% set pageref = "MVP2-FUL-AAS-013" %}
 {% extends "layouts/mvp-full-appeal/v2.html" %}
 
 {% block pageTitle %}
