--- a/app/views/mvp-full-appeal/v2/full/appeal-site/knows-all/tell-landowners.html
+++ b/app/views/mvp-full-appeal/v2/full/appeal-site/knows-all/tell-landowners.html
@@ -1,4 +1,4 @@
-{% set pageref = "MVP-FUL-AAS-005" %}
+{% set pageref = "MVP2-FUL-AAS-005" %}
 {% extends "layouts/mvp-full-appeal/v2.html" %}
 
 {% block pageTitle %}
