--- a/app/views/mvp-full-appeal/v2/full/planning-application-documents/application-number.html
+++ b/app/views/mvp-full-appeal/v2/full/planning-application-documents/application-number.html
@@ -1,4 +1,4 @@
-{% set pageref = "MVP-FUL-PLA-002" %}
+{% set pageref = "MVP2-FUL-PLA-002" %}
 {% extends "layouts/mvp-full-appeal/v2.html" %}
 
 {% block pageTitle %}
