--- a/app/views/mvp-full-appeal/v2/full/planning-application-documents/decision-letter.html
+++ b/app/views/mvp-full-appeal/v2/full/planning-application-documents/decision-letter.html
@@ -1,4 +1,4 @@
-{% set pageref = "MVP-FUL-PLA-006" %}
+{% set pageref = "MVP2-FUL-PLA-006" %}
 {% extends "layouts/mvp-full-appeal/v2.html" %}
 
 {% block pageTitle %}
