--- a/app/views/mvp-full-appeal/v2/full/planning-application-documents/plans-drawings-upload.html
+++ b/app/views/mvp-full-appeal/v2/full/planning-application-documents/plans-drawings-upload.html
@@ -1,4 +1,4 @@
-{% set pageref = "MVP-FUL-PLA-003" %}
+{% set pageref = "MVP2-FUL-PLA-003" %}
 {% extends "layouts/mvp-full-appeal/v2.html" %}
 
 {% block pageTitle %}
