--- a/app/views/mvp-full-appeal/v2/full/procedure-type/common-ground.html
+++ b/app/views/mvp-full-appeal/v2/full/procedure-type/common-ground.html
@@ -1,4 +1,4 @@
-{% set pageref = "MVP-FUL-DYA-005" %}
+{% set pageref = "MVP2-FUL-DYA-005" %}
 {% extends "layouts/mvp-full-appeal/v2.html" %}
 
 {% block pageTitle %}
