--- a/app/views/mvp-full-appeal/v2/full/task-list.html
+++ b/app/views/mvp-full-appeal/v2/full/task-list.html
@@ -1,4 +1,4 @@
-{% set pageref = "MVP-FUL-TL" %}
+{% set pageref = "MVP2-FUL-TL" %}
 {% extends "layouts/mvp-full-appeal/v2.html" %}
 
 {% block pageTitle %}
