Changes to contact us information

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+service-start{% extends "layout.html" %}
 
 {% block pageTitle %}
   Prototypes for {{ serviceName }}
@@ -162,7 +162,7 @@
                       </li>
                       <br>
                       <li>
-                        <a href="/save-progress/v2/what-do-you-want-to-do">
+                        <a href="/save-progress/v2/service-start">
                           Service start
                         </a>
                       </li>
