--- a/app/views/save-progress/v2/confirm-email-resent.html
+++ b/app/views/save-progress/v2/confirm-email-resent.html
@@ -57,8 +57,17 @@
       </p>
 
       <p class="govuk-body">
-        Email: <a href="">enquiries@planninginspectorate.gov.uk</a><br>
-        Telephone: 0303 444 5000
+        Email: <a href="mailto:enquiries@planninginspectorate.gov.uk">enquiries@planninginspectorate.gov.uk</a><br>
+        We aim to respond within 5 working days.
+      </p>
+
+      <p class="govuk-body">
+        Telephone: <a href="tel:03034445000">0303 444 5000</a><br>
+        Monday to Friday, 9am to 5pm (except public holidays)<br>
+      </p>
+
+      <p class="govuk-body">
+        <a href="https://www.gov.uk/call-charges">Find out about call charges</a>
       </p>
 
     </div>
