--- a/app/views/save-progress/v2/magic-link-email-sent.html
+++ b/app/views/save-progress/v2/magic-link-email-sent.html
@@ -50,7 +50,7 @@
       </h2>
 
       <p class="govuk-body">
-        Check the email has not gone into your spam or junk folder.
+        Check that the email has not gone into your spam or junk folder.
       </p>
 
       <p class="govuk-body">
@@ -62,8 +62,17 @@
       </p>
 
       <p class="govuk-body">
-        Email: <a href="">enquiries@planninginspectorate.gov.uk</a><br>
-        Telephone: 0303 444 5000
+        Email: <a href="mailto:enquiries@planninginspectorate.gov.uk">enquiries@planninginspectorate.gov.uk</a><br>
+        We aim to respond within 5 working days.
+      </p>
+
+      <p class="govuk-body">
+        Telephone: <a href="tel:03034445000">0303 444 5000</a><br>
+        Monday to Friday, 9am to 5pm (except public holidays)<br>
+      </p>
+
+      <p class="govuk-body">
+        <a href="https://www.gov.uk/call-charges">Find out about call charges</a>
       </p>
 
     </div>
