Removing the telephone number link

--- a/app/views/save-progress/v2/confirm-email.html
+++ b/app/views/save-progress/v2/confirm-email.html
@@ -66,7 +66,7 @@
       </p>
 
       <p class="govuk-body">
-        Telephone: <a href="tel:03034445000">0303 444 5000</a><br>
+        Telephone: 0303 444 5000<br>
         Monday to Friday, 9am to 5pm (except public holidays)<br>
       </p>
 
