--- a/app/views/save-progress/v2/magic-link-email.html
+++ b/app/views/save-progress/v2/magic-link-email.html
@@ -18,7 +18,7 @@ Dear [IP NAME]Site detailsSite Address:[INSERT HERE]Description of development:[
   </p>
   <p>
     <strong>To:</strong> {{ data['email'] or 'sam@mac.com'}}<br>
-    <strong>From:</strong> planningappeals@bristolcitycouncil.gov.uk
+    <strong>From:</strong> appeals@planninginspectorate.gov.uk
   </p>
   <p>
     <img src="{{ asset_path }}images/pi-logo.png" width="150"/>
