--- a/app/views/index.html
+++ b/app/views/index.html
@@ -44,8 +44,8 @@ service-start{% extends "layout.html" %}
                   <div class="govuk-inset-text govuk-!-margin-top-0">
 
                     {{ govukTag({
-                      classes: "govuk-tag--red govuk-!-margin-bottom-3",
-                      text: "WIP"
+                      classes: "govuk-tag--green govuk-!-margin-bottom-3",
+                      text: "Ready for UR"
                     }) }}
 
                     <p class="govuk-body">
