Content updates to "Your appeal decision" in guidance

--- a/app/views/guidance/full/v1/your-appeal-decision.html
+++ b/app/views/guidance/full/v1/your-appeal-decision.html
@@ -120,21 +120,7 @@
 
         <h2 class="govuk-heading-l">If you think your decision is incorrect</h2>
         <p class="govuk-body">
-          If you think the Planning Inspectorate made a legal mistake, you can challenge the decision in court.
-        </p>
-        <p class="govuk-body">
-          Find out more about <a href="#" class="govuk-link">the Administrative Court</a>.
-        </p>
-        <p class="govuk-body">
-          Get advice from a lawyer if you're unsure about this. You can <a href="#" class="govuk-link">find a solicitor on The Law Society's website</a>.
-        </p>
-
-        <h2 class="govuk-heading-l">If you want to complain</h2>
-        <p class="govuk-body">
-          You can complain about how the Planning Inspectorate handled your appeal. There's no time limit for complaints.
-        </p>
-        <p class="govuk-body">
-          Find out about <a href="#" class="govuk-link">the Planning Inspectorate's complaints procedure</a>.
+          If you think the Planning Inspectorate's decision is incorrect, you can challenge the decision in court.
         </p>
 
 <!-- Navigation-->
