Content amends for guidance

--- a/app/views/guidance/full/v1/your-appeal-decision.html
+++ b/app/views/guidance/full/v1/your-appeal-decision.html
@@ -24,7 +24,7 @@
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
 
-        <h1 class="govuk-heading-xl">Appeal refused planning permission</h1>
+        <h1 class="govuk-heading-xl">Appeal a planning decision</h1>
         <aside role="complementary">
           <nav class="gem-c-contents-list " aria-label="Pages in this guide" role="navigation" data-module="track-click">
             <h2 class="govuk-body gem-c-contents-list__title">Contents</h2>
@@ -80,7 +80,7 @@
 
         <h3 class="govuk-heading-m">If your appeal is rejected</h3>
         <p class="govuk-body">
-          Your application stays refused.
+          Your application is refused.
         </p>
         <p class="govuk-body">
           You can still talk to your local planning department about resubmitting your application. There may be small changes you can make to improve the chances of your application being granted.
