--- a/app/views/guidance/full/v1/before-you-appeal.html
+++ b/app/views/guidance/full/v1/before-you-appeal.html
@@ -123,6 +123,9 @@
           <li>the local planning department</li>
           <li>other interested parties, for example, neighbours</li>
         </ul>
+        <p class="govuk-body">
+          This is the most common way that the Planning Inspectorate makes decisions about appeals.
+        </p>
 
         <h3 class="govuk-heading-m">Hearing</h3>
         <p class="govuk-body">
@@ -206,7 +209,7 @@
         </p>
 
         <h3 class="govuk-heading-m">Draft statement of common ground</h3>
-        <p class="govuk-body">#
+        <p class="govuk-body">
           Hearing and public inquiry appeals need a statement of common ground. This says what you and the local planning department agree on. It helps the Planning Inspector to focus on where you disagree.
         </p>
         <p class="govuk-body">
