--- a/app/views/guidance/full/v1/your-appeal-decision.html
+++ b/app/views/guidance/full/v1/your-appeal-decision.html
@@ -82,19 +82,10 @@
         <p class="govuk-body">
           Your application is refused.
         </p>
-        <p class="govuk-body">
-          You can still talk to your local planning department about resubmitting your application. There may be small changes you can make to improve the chances of your application being granted.
-        </p>
 
         <h3 class="govuk-heading-m">If you get a split decision</h3>
         <p class="govuk-body">
-          Part of your planning application is granted.
-        </p>
-        <p class="govuk-body">
-          You may choose to go ahead with that part of the planned work.
-        </p>
-        <p class="govuk-body">
-          You can also talk to your local planning department about resubmitting your application. There may be small changes you can make to improve the chances of your whole application being granted.
+          Part of your planning application is granted. You can go ahead with that part of the planned work.
         </p>
 
         <h2 class="govuk-heading-l">Appeals against conditions</h2>
