--- a/app/views/index.html
+++ b/app/views/index.html
@@ -41,6 +41,150 @@ service-start{% extends "layout.html" %}
               <div class="govuk-grid-row">
                 <div class="govuk-grid-column-two-thirds">
 
+                  <!-- save and return version 3 -->
+                  <div class="govuk-inset-text govuk-!-margin-top-0">
+
+                    {{ govukTag({
+                      classes: "govuk-tag--red govuk-!-margin-bottom-3",
+                      text: "WIP"
+                    }) }}
+
+                    <p class="govuk-body">
+                      Designing a pattern to help users save their progress during an appeal submission and later return to their appeal.
+                    </p>
+
+                    <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
+                      ‘Save and return’ - version 3
+                    </h3>
+
+                    <ul class="govuk-list govuk-list--bullet">
+                      <li>
+                        <a href="/save-progress/v3/check-answers">
+                          End ‘Before you start’ / Check answers
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/save-progress/v3/what-is-your-application-number">
+                          What is your application number
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/save-progress/v3/what-is-your-email">
+                          What is your email address
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/save-progress/v3/confirm-email">
+                          Confirm your email address
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/save-progress/v3/confirmation-email">
+                          Subject: Confirm your email address
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/save-progress/v3/email-confirmed">
+                          Your email address is confirmed
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/save-progress/v3/expired-link">
+                          Link expired
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/save-progress/v3/confirm-email-resent">
+                          New link sent
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/save-progress/v3/before-you-continue">
+                          You’ll need to submit some documents
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/save-progress/v3/task-list">
+                          Task list
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/save-progress/v3/contact-details/who-are-you">
+                          Provide your contact details<br>
+                          Was the planning application made in your name?
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/save-progress/v3/contact-details/your-details">
+                          Provide your contact details<br>
+                          Contact details
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/save-progress/v3/appeal-saved">
+                          Your appeal has been saved
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/save-progress/v3/return-email">
+                          Subject: Return to appeal a planning decision
+                        </a>
+                      </li>
+
+                      <li>
+                        <a href="/save-progress/v3/appeal-closed">
+                          Appeal closed (return link expired)
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/save-progress/v3/input-magic-link-email">
+                          Enter the email address that you used for the appeal
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/save-progress/v3/magic-link-email-sent">
+                          We’ve sent you an email
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/save-progress/v3/magic-link-email">
+                          Subject: Return to appeal a planning decision
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/save-progress/v3/incomplete-appeals">
+                          Incomplete appeals
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/save-progress/v3/return-email">
+                          Return email
+                        </a>
+                      </li>
+                      <br>
+                      <li>
+                        <a href="/save-progress/v3/service-start">
+                          Service start
+                        </a>
+                      </li>
+
+                    </ul>
+
+                    <details class="govuk-details" data-module="govuk-details">
+                      <summary class="govuk-details__summary">
+                        <span class="govuk-details__summary-text">
+                          Jira Tickets (1)
+                        </span>
+                      </summary>
+                      <div class="govuk-details__text">
+                        <ul class="govuk-list govuk-list-bulleted">
+                          <li><a href="https://pins-ds.atlassian.net/browse/AS-4621" target="_blank">AS-4621 - Save progress and return to appeal submissions (opens in new tab)</a></li>
+                        </ul>
+                      </div>
+                    </details>
+                  </div>
+
+                  <!-- save and return version 2 -->
                   <div class="govuk-inset-text govuk-!-margin-top-0">
 
                     {{ govukTag({
@@ -168,6 +312,32 @@ service-start{% extends "layout.html" %}
                       </li>
 
                     </ul>
+
+                    <details class="govuk-details" data-module="govuk-details">
+                      <summary class="govuk-details__summary">
+                        <span class="govuk-details__summary-text">
+                          Jira Tickets (1)
+                        </span>
+                      </summary>
+                      <div class="govuk-details__text">
+                        <ul class="govuk-list govuk-list-bulleted">
+                          <li><a href="https://pins-ds.atlassian.net/browse/AS-4621" target="_blank">AS-4621 - Save progress and return to appeal submissions (opens in new tab)</a></li>
+                        </ul>
+                      </div>
+                    </details>
+                  </div>
+
+                  <!-- save and return version 1 -->
+                  <div class="govuk-inset-text govuk-!-margin-top-0">
+
+                    {{ govukTag({
+                      classes: "govuk-tag--green govuk-!-margin-bottom-3",
+                      text: "Ready for UR"
+                    }) }}
+
+                    <p class="govuk-body">
+                      Designing a pattern to help users save their progress during an appeal submission and later return to their appeal.
+                    </p>
 
                     <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
                       ‘Save and return’ - version 1
